--- a/frontend/nginx_production/nginx.conf
+++ b/frontend/nginx_production/nginx.conf
@@ -18,6 +18,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /storage/ {
+        proxy_pass http://backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|webp|map)$ {
         expires 6M;
         access_log off;
