--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: cd backend && npm install
 
       - name: Build the application
         run: npm run build
