--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -13,7 +13,7 @@ on:
       - git-workflows
 
 jobs:
-  test:
+  backend-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,10 +29,10 @@ jobs:
         run: cd backend && npm install
 
       - name: Build the application
-        run: npm run build
+        run: cd backend && npm run build
 
       - name: Run Unit Tests
-        run: npm run test
+        run: cd backend && npm run test
 
       - name: Run E2E Tests
-        run: npm run test:e2e
+        run: cd backend && npm run test:e2e
