--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -36,3 +36,6 @@ jobs:
 
       - name: Run E2E Tests
         run: cd backend && npm run test:e2e
+
+      - name: Run Coverage Tests
+        run: cd backend && npm run test:coverage
