--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -38,4 +38,4 @@ jobs:
         run: cd backend && npm run test:e2e
 
       - name: Run Coverage Tests
-        run: cd backend && npm run test:coverage
+        run: cd backend && npm run test:cov
