--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-drag-drop-files": "^2.4.0",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.28.0"
   },
