--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,4 +1,14 @@
 server {
+  listen 80;
+  server_name localhost;
+
+  location / {
+    root /etc/nginx/html;
+    index index.html;
+    try_files $uri $uri/ =404;
+    error_page 404 /index.html;
+  }
+
   location /api/ {
       proxy_pass http://backend:3001;
       proxy_http_version 1.1;
